force-app/main/default/objects/TW1_Step__c/fields/TW5_Quality_Receipt_Inspection_Item__c.field-meta.xml
<CustomField>
    <fullName>TW5_Quality_Receipt_Inspection_Item__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260,
FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + TW5_IDItem__c , TW5_Item_Name__c, &apos;_self&apos;)</formula>
    <label>Quality Receipt Inspection Item</label>
    <type>Text</type>
</CustomField>