force-app/main/default/objects/TW1_Step__c/fields/TW5_Quality_Receipt_Status__c.field-meta.xml
<CustomField>
    <fullName>TW5_Quality_Receipt_Status__c</fullName>
    <label>Quality Receipt Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Approved Under Restriction</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>