force-app/main/default/objects/TW1_Step__c/fields/TW5_RecordTypeQualityReceiptInspectionRe__c.field-meta.xml
<CustomField>
    <fullName>TW5_RecordTypeQualityReceiptInspectionRe__c</fullName>
    <formula>CASESAFEID(RecordTypeId) = $Setup.IDStep__c.Id_RecordType_Quality_Receipt_Ins_Result__c</formula>
    <label>RecordTypeQualityReceiptInspectionRes?</label>
    <type>Checkbox</type>
</CustomField>