force-app/main/default/objects/TW1_Step__c/fields/TW5_Rejected_Items__c.field-meta.xml
<CustomField>
    <fullName>TW5_Rejected_Items__c</fullName>
    <label>Rejected Items</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>