force-app/main/default/objects/TW1_Step__c/recordTypes/Approval_Process.recordType-meta.xml
<RecordType>
    <fullName>Approval_Process</fullName>
    <active>true</active>
    <label>Approval Process</label>
</RecordType>