force-app/main/default/objects/TW1_Step__c/recordTypes/Approval_Step_Date_Availability.recordType-meta.xml
<RecordType>
    <fullName>Approval_Step_Date_Availability</fullName>
    <active>true</active>
    <label>Approval Step - Date Availability</label>
</RecordType>