force-app/main/default/objects/TW1_Step__c/recordTypes/Approval_Step_Date_Confirmation.recordType-meta.xml
<RecordType>
    <fullName>Approval_Step_Date_Confirmation</fullName>
    <active>true</active>
    <label>Approval Step - Date Confirmation</label>
</RecordType>