force-app/main/default/objects/TW1_Step__c/recordTypes/Approval_Step_Emergency_Approval.recordType-meta.xml
<RecordType>
    <fullName>Approval_Step_Emergency_Approval</fullName>
    <active>true</active>
    <label>Approval Step - Emergency Approval</label>
</RecordType>