force-app/main/default/objects/TW1_Step__c/recordTypes/Approval_Step_Inspection_Definition.recordType-meta.xml
<RecordType>
    <fullName>Approval_Step_Inspection_Definition</fullName>
    <active>true</active>
    <label>Approval Step - Inspection Definition</label>
</RecordType>