force-app/main/default/objects/TW1_Step__c/recordTypes/BM_NF.recordType-meta.xml
<RecordType>
    <fullName>BM_NF</fullName>
    <active>true</active>
    <label>BM - NF</label>
</RecordType>