force-app/main/default/objects/TW1_Step__c/recordTypes/BM_NF_Step_Supplier.recordType-meta.xml
<RecordType>
    <fullName>BM_NF_Step_Supplier</fullName>
    <active>true</active>
    <label>BM - NF Step - Supplier</label>
</RecordType>