force-app/main/default/objects/TW1_Step__c/recordTypes/Incidente_AcoesSeremTomadas.recordType-meta.xml
<RecordType>
    <fullName>Incidente_AcoesSeremTomadas</fullName>
    <active>true</active>
    <label>Incident - Actions to be taken</label>
</RecordType>