force-app/main/default/objects/TW1_Step__c/recordTypes/Incidente_EvidenciaIncidente.recordType-meta.xml
<RecordType>
    <fullName>Incidente_EvidenciaIncidente</fullName>
    <active>true</active>
    <label>Incident - Evidence of Incident</label>
</RecordType>