force-app/main/default/objects/TW1_Step__c/recordTypes/Incidente_ValidacaoDasAcoesIncidente.recordType-meta.xml
<RecordType>
    <fullName>Incidente_ValidacaoDasAcoesIncidente</fullName>
    <active>true</active>
    <label>Incident - Validation of actions to be taken</label>
</RecordType>