force-app/main/default/objects/TW1_Step__c/recordTypes/Incidente_ValidarEvidenciaIncidente.recordType-meta.xml
<RecordType>
    <fullName>Incidente_ValidarEvidenciaIncidente</fullName>
    <active>true</active>
    <label>Incident - Validate Evidence of Incident</label>
</RecordType>