force-app/main/default/objects/TW1_Step__c/recordTypes/Perform_Inspection.recordType-meta.xml
<RecordType>
    <fullName>Perform_Inspection</fullName>
    <active>true</active>
    <label>Perform Inspection</label>
</RecordType>