force-app/main/default/objects/TW1_Step__c/recordTypes/TRT_MonitoringComplement.recordType-meta.xml
<RecordType>
    <fullName>TRT_MonitoringComplement</fullName>
    <active>true</active>
    <label>Monitoring Complement</label>
</RecordType>