force-app/main/default/objects/TW1_Step__c/recordTypes/TRT_MonitoringInvite.recordType-meta.xml
<RecordType>
    <fullName>TRT_MonitoringInvite</fullName>
    <active>true</active>
    <label>Monitoring Invite</label>
</RecordType>