force-app/main/default/objects/TW1_Step__c/recordTypes/TW1_Action_Plan.recordType-meta.xml
<RecordType>
    <fullName>TW1_Action_Plan</fullName>
    <active>true</active>
    <label>Action Plan</label>
</RecordType>