force-app/main/default/objects/TW1_Step__c/recordTypes/TW1_Action_Plan_Step_Supply_Chain.recordType-meta.xml
<RecordType>
    <fullName>TW1_Action_Plan_Step_Supply_Chain</fullName>
    <active>true</active>
    <label>Action Plan Step - Supply Chain</label>
</RecordType>