force-app/main/default/objects/TW1_Step__c/recordTypes/TW1_Approval_Step_CEO.recordType-meta.xml
<RecordType>
    <fullName>TW1_Approval_Step_CEO</fullName>
    <active>true</active>
    <label>Approval Step - CEO</label>
</RecordType>