force-app/main/default/objects/TW1_Step__c/recordTypes/TW1_Approval_Step_Compliance_Initial_Validation.recordType-meta.xml
<RecordType>
    <fullName>TW1_Approval_Step_Compliance_Initial_Validation</fullName>
    <active>true</active>
    <label>Approval Step - Compliance Initial Validation</label>
</RecordType>