force-app/main/default/objects/TW1_Step__c/recordTypes/TW1_Approval_Step_Docs_Validation_VV.recordType-meta.xml
<RecordType>
    <fullName>TW1_Approval_Step_Docs_Validation_VV</fullName>
    <active>true</active>
    <label>Approval Step - Docs Validation (VV)</label>
</RecordType>