force-app/main/default/objects/TW1_Step__c/recordTypes/TW1_Approval_Step_Enable_Customer_User.recordType-meta.xml
<RecordType>
    <fullName>TW1_Approval_Step_Enable_Customer_User</fullName>
    <active>true</active>
    <label>Approval Step - Enable Customer User</label>
</RecordType>