force-app/main/default/objects/TW1_Step__c/recordTypes/TW1_Approval_Step_Engineering.recordType-meta.xml
<RecordType>
    <fullName>TW1_Approval_Step_Engineering</fullName>
    <active>true</active>
    <label>Approval Step - Engineering</label>
</RecordType>