force-app/main/default/objects/TW1_Step__c/recordTypes/TW1_Approval_Step_finalization_approval_process.recordType-meta.xml
<RecordType>
    <fullName>TW1_Approval_Step_finalization_approval_process</fullName>
    <active>true</active>
    <label>Approval Step - finalization approval process</label>
</RecordType>