force-app/main/default/objects/TW1_Step__c/recordTypes/TW1_Approval_Step_Finance_Step_1.recordType-meta.xml
<RecordType>
    <fullName>TW1_Approval_Step_Finance_Step_1</fullName>
    <active>true</active>
    <label>Approval Step - Finance - Step 1</label>
</RecordType>