force-app/main/default/objects/TW1_Step__c/recordTypes/TW1_Approval_Step_Finance_Step_2.recordType-meta.xml
<RecordType>
    <fullName>TW1_Approval_Step_Finance_Step_2</fullName>
    <active>true</active>
    <label>Approval Step - Finance - Step 2</label>
</RecordType>