force-app/main/default/objects/TW1_Step__c/recordTypes/TW1_Approval_Step_GM_SC_FIN_CON.recordType-meta.xml
<RecordType>
    <fullName>TW1_Approval_Step_GM_SC_FIN_CON</fullName>
    <active>true</active>
    <label>Approval Step - GM SC, FIN, CON</label>
</RecordType>