force-app/main/default/objects/TW1_Step__c/recordTypes/TW1_Approval_Step_HSEQ_EPCI_or_Operation.recordType-meta.xml
<RecordType>
    <fullName>TW1_Approval_Step_HSEQ_EPCI_or_Operation</fullName>
    <active>true</active>
    <label>Approval Step - HSEQ (EPCI or Operation)</label>
</RecordType>