force-app/main/default/objects/TW1_Step__c/recordTypes/TW1_Approval_Step_HSEQ_Get_Clarification_from_Supplier.recordType-meta.xml
<RecordType>
    <fullName>TW1_Approval_Step_HSEQ_Get_Clarification_from_Supplier</fullName>
    <active>true</active>
    <label>Approval Step - HSEQ Get Clarification from Supplier</label>
</RecordType>