force-app/main/default/objects/TW1_Step__c/recordTypes/TW1_Approval_Step_Procurement_Manager.recordType-meta.xml
<RecordType>
    <fullName>TW1_Approval_Step_Procurement_Manager</fullName>
    <active>true</active>
    <label>Approval Step - Procurement Manager</label>
</RecordType>