force-app/main/default/objects/TW1_Step__c/recordTypes/TW1_Approval_Step_Quality.recordType-meta.xml
<RecordType>
    <fullName>TW1_Approval_Step_Quality</fullName>
    <active>true</active>
    <label>Approval Step - Quality</label>
</RecordType>