force-app/main/default/objects/TW1_Step__c/recordTypes/TW1_Approval_Step_Vetting_Final_Check.recordType-meta.xml
<RecordType>
    <fullName>TW1_Approval_Step_Vetting_Final_Check</fullName>
    <active>true</active>
    <label>Approval Step - Vetting Final Check</label>
</RecordType>