force-app/main/default/objects/TW1_Step__c/recordTypes/TW1_Approval_Step_VV_Team.recordType-meta.xml
<RecordType>
    <fullName>TW1_Approval_Step_VV_Team</fullName>
    <active>true</active>
    <label>Approval Step - VV Team</label>
</RecordType>