force-app/main/default/objects/TW1_Step__c/recordTypes/TW1_Approval_Step_VVW_Attachment.recordType-meta.xml
<RecordType>
    <fullName>TW1_Approval_Step_VVW_Attachment</fullName>
    <active>true</active>
    <label>Approval Step - VVW Attachment</label>
</RecordType>