force-app/main/default/objects/TW1_Step__c/recordTypes/TW1_Complete_Registration.recordType-meta.xml
<RecordType>
    <fullName>TW1_Complete_Registration</fullName>
    <active>true</active>
    <label>Complete Registration</label>
</RecordType>