force-app/main/default/objects/TW1_Step__c/recordTypes/TW1_Contract_Management.recordType-meta.xml
<RecordType>
    <fullName>TW1_Contract_Management</fullName>
    <active>true</active>
    <label>Contract Management</label>
</RecordType>