force-app/main/default/objects/TW1_Step__c/recordTypes/TW1_Contract_Progress.recordType-meta.xml
<RecordType>
    <fullName>TW1_Contract_Progress</fullName>
    <active>true</active>
    <label>Contract Progress</label>
</RecordType>