force-app/main/default/objects/TW1_Step__c/recordTypes/TW1_Contract_Registration.recordType-meta.xml
<RecordType>
    <fullName>TW1_Contract_Registration</fullName>
    <active>true</active>
    <label>Contract Registration</label>
</RecordType>