force-app/main/default/objects/TW1_Step__c/recordTypes/TW1_Inspection_Supplier_Response.recordType-meta.xml
<RecordType>
    <fullName>TW1_Inspection_Supplier_Response</fullName>
    <active>true</active>
    <label>Inspection Supplier Response</label>
</RecordType>