force-app/main/default/objects/TW1_Step__c/recordTypes/TW1_Interacions.recordType-meta.xml
<RecordType>
    <fullName>TW1_Interacions</fullName>
    <active>true</active>
    <label>Interacions</label>
</RecordType>