force-app/main/default/objects/TW1_Step__c/recordTypes/TW1_Legal_Team.recordType-meta.xml
<RecordType>
    <fullName>TW1_Legal_Team</fullName>
    <active>true</active>
    <label>Legal Team</label>
</RecordType>