force-app/main/default/objects/TW1_Step__c/recordTypes/TW1_Step_Meeting.recordType-meta.xml
<RecordType>
    <fullName>TW1_Step_Meeting</fullName>
    <active>true</active>
    <label>Step - Meeting</label>
</RecordType>