force-app/main/default/objects/TW1_Step__c/recordTypes/TW1_Step_Modec_Logistic.recordType-meta.xml
<RecordType>
    <fullName>TW1_Step_Modec_Logistic</fullName>
    <active>true</active>
    <label>Step - Modec Logistic</label>
</RecordType>