force-app/main/default/objects/TW1_Step__c/recordTypes/TW3_Approval_Step_HSEQ_EPCI_or_Operation_Senegal.recordType-meta.xml
<RecordType>
    <fullName>TW3_Approval_Step_HSEQ_EPCI_or_Operation_Senegal</fullName>
    <active>true</active>
    <label>Approval Step - HSEQ (EPCI or Operation) - Senegal</label>
</RecordType>