force-app/main/default/objects/TW1_Step__c/recordTypes/TW3_Approval_Step_VV_Team_Senegal.recordType-meta.xml
<RecordType>
    <fullName>TW3_Approval_Step_VV_Team_Senegal</fullName>
    <active>true</active>
    <label>Approval Step - VV Team - Senegal</label>
</RecordType>