force-app/main/default/objects/TW1_Step__c/recordTypes/TW4_Action_Plan_Validation.recordType-meta.xml
<RecordType>
    <fullName>TW4_Action_Plan_Validation</fullName>
    <active>true</active>
    <label>Action Plan Validation</label>
</RecordType>