force-app/main/default/objects/TW1_Step__c/recordTypes/TW4_Audit_Confirmation.recordType-meta.xml
<RecordType>
    <fullName>TW4_Audit_Confirmation</fullName>
    <active>true</active>
    <label>Audit Confirmation</label>
</RecordType>