force-app/main/default/objects/TW1_Step__c/recordTypes/TW4_Audit_Confirmation_Date.recordType-meta.xml
<RecordType>
    <fullName>TW4_Audit_Confirmation_Date</fullName>
    <active>true</active>
    <label>Audit Confirmation Date</label>
</RecordType>