force-app/main/default/objects/TW1_Step__c/recordTypes/TW4_Audit_Schedule.recordType-meta.xml
<RecordType>
    <fullName>TW4_Audit_Schedule</fullName>
    <active>true</active>
    <label>Audit Schedule</label>
</RecordType>