force-app/main/default/objects/TW1_Step__c/recordTypes/TW4_Evidence_Analysis.recordType-meta.xml
<RecordType>
    <fullName>TW4_Evidence_Analysis</fullName>
    <active>true</active>
    <label>Evidence Analysis</label>
</RecordType>