force-app/main/default/objects/TW1_Step__c/recordTypes/TW4_Nonconformity_Evidence.recordType-meta.xml
<RecordType>
    <fullName>TW4_Nonconformity_Evidence</fullName>
    <active>true</active>
    <label>Nonconformity Evidence</label>
</RecordType>