force-app/main/default/objects/TW1_Step__c/recordTypes/TW4_VV_Audit_Information.recordType-meta.xml
<RecordType>
    <fullName>TW4_VV_Audit_Information</fullName>
    <active>true</active>
    <label>VV Audit Information</label>
</RecordType>