force-app/main/default/objects/TW1_Step__c/recordTypes/TW5_Quality_Receipt_Inspection_Item_Approved_By_OM_Representative.recordType-meta.xml
<RecordType>
    <fullName>TW5_Quality_Receipt_Inspection_Item_Approved_By_OM_Representative</fullName>
    <active>true</active>
    <label>Quality Receipt Inspection - Item Approved By OM Representative</label>
</RecordType>