force-app/main/default/objects/TW1_Step__c/recordTypes/TW5_Quality_Receipt_Inspection_Result.recordType-meta.xml
<RecordType>
    <fullName>TW5_Quality_Receipt_Inspection_Result</fullName>
    <active>true</active>
    <label>Quality Receipt Inspection Result</label>
</RecordType>