force-app/main/default/objects/TW1_Step__c/recordTypes/TW5_Quality_Receipt_Inspection_Supplier_Documentation.recordType-meta.xml
<RecordType>
    <fullName>TW5_Quality_Receipt_Inspection_Supplier_Documentation</fullName>
    <active>true</active>
    <label>Quality Receipt Inspection Supplier Documentation</label>
</RecordType>