force-app/main/default/objects/TW1_Step__c/recordTypes/TW5_Quality_Receipt_Inspection_Supply_Chain_Evaluation.recordType-meta.xml
<RecordType>
    <fullName>TW5_Quality_Receipt_Inspection_Supply_Chain_Evaluation</fullName>
    <active>true</active>
    <label>Quality Receipt Inspection Supply Chain Evaluation</label>
</RecordType>