force-app/main/default/objects/TW1_Step__c/recordTypes/Warning_ReceiveConfirmation.recordType-meta.xml
<RecordType>
    <fullName>Warning_ReceiveConfirmation</fullName>
    <active>true</active>
    <label>Warning - Receive Confirmation</label>
</RecordType>