force-app/main/default/objects/TW1_Step__c/validationRules/CantCloseDateAvailRejectedWONote.validationRule-meta.xml
<ValidationRule>
    <fullName>CantCloseDateAvailRejectedWONote</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

RecordType.DeveloperName = &quot;Approval_Step_Date_Availability&quot;,
ISPICKVAL(TW1_Status__c , &quot;Closed&quot;),
 ISPICKVAL( TW1_Inspection_Schedule_Date_Status__c , &quot;Rejected&quot;),
ISBLANK( TW1_Date_Availability_Note__c )
)</errorConditionFormula>
    <errorMessage>You can&apos;t close this step as rejected without a Date Availability Note.</errorMessage>
</ValidationRule>