force-app/main/default/objects/TW1_Step__c/validationRules/CantCloseDateAvailWOSchedDateStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>CantCloseDateAvailWOSchedDateStatus</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

RecordType.DeveloperName = &quot;Approval_Step_Date_Availability&quot;,
ISPICKVAL(TW1_Status__c , &apos;Closed&apos;),
 ISBLANK(TEXT(TW1_Inspection_Schedule_Date_Status__c ))
)</errorConditionFormula>
    <errorMessage>Can&apos;t close this step without an Inspection Schedule Date Status.</errorMessage>
</ValidationRule>