force-app/main/default/objects/TW1_Step__c/validationRules/CantCloseEvidenceAnalysisRejWOReason.validationRule-meta.xml
<ValidationRule>
    <fullName>CantCloseEvidenceAnalysisRejWOReason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				ISPICKVAL(TW1_Status__c, &quot;Closed&quot; ),
  			 OR(
										ISPICKVAL(Evidence_Status__c, &quot;Rejected&quot;),
										ISPICKVAL(Evidence_Status__c, &quot;Review Evidence&quot;)
										),
						ISCHANGED(Evidence_Status__c),
			  	 ISBLANK(TW4_Evidences_Rejection_Reason__c) 
						)</errorConditionFormula>
    <errorMessage>Can&apos;t close this step as rejected or to review without a rejection reason.</errorMessage>
</ValidationRule>