force-app/main/default/objects/TW1_Step__c/validationRules/CantCloseInspDefinitionWOInstrucions.validationRule-meta.xml
<ValidationRule>
    <fullName>CantCloseInspDefinitionWOInstrucions</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

RecordType.DeveloperName = &quot;Approval_Step_Inspection_Definition&quot;,
ISPICKVAL(TW1_Status__c , &quot;Closed&quot;),
ISBLANK(  TW1_Inspection_Instruction__c  )
)</errorConditionFormula>
    <errorMessage>You can&apos;t close this step without a Inspection Instruction.</errorMessage>
</ValidationRule>