force-app/main/default/objects/TW1_Step__c/validationRules/CantCloseInspectionWOInspResult.validationRule-meta.xml
<ValidationRule>
    <fullName>CantCloseInspectionWOInspResult</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

 TW1_Request__r.TW1_All_Inspection_Items_Status_Filled__c = false,
RecordType.DeveloperName = &quot;Perform_Inspection&quot;,
ISPICKVAL(TW1_Status__c , &apos;Closed&apos;)
)</errorConditionFormula>
    <errorMessage>You can&apos;t close a Perform Inspection Step without a result on each Inspection Item.</errorMessage>
</ValidationRule>