force-app/main/default/objects/TW1_Step__c/validationRules/CantClosePerformInspWQueueOwner.validationRule-meta.xml
<ValidationRule>
    <fullName>CantClosePerformInspWQueueOwner</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
(LEFT( OwnerId , 3) = &quot;00G&quot;),
    OR(
				RecordType.DeveloperName = &quot;Perform_Inspection&quot;,
				RecordType.DeveloperName =	&quot;TW5_Quality_Receipt_Inspection_Supply_Chain_Evaluation&quot;
				),
  ISPICKVAL(TW1_Status__c , &apos;Closed&apos;) 
)</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>You have to take ownership of this Step to close it.</errorMessage>
</ValidationRule>