force-app/main/default/objects/TW1_Step__c/validationRules/CantCloseRegistrationWOSupplyChain.validationRule-meta.xml
<ValidationRule>
    <fullName>CantCloseRegistrationWOSupplyChain</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

  RecordType.DeveloperName = &quot;TW1_Contract_Registration&quot;,
ISBLANK( TW1_Supply_Contract_Manager__c),
ISCHANGED( TW1_Status__c),
ISPICKVAL(TW1_Status__c,&quot;Closed&quot;))</errorConditionFormula>
    <errorMessage>You can&apos;t close this step without fill contract info.</errorMessage>
</ValidationRule>