force-app/main/default/objects/TW1_Step__c/validationRules/CantGoThroughContractProgWithoutSCInput.validationRule-meta.xml
<ValidationRule>
    <fullName>CantGoThroughContractProgWithoutSCInput</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  CONTAINS(RecordType.DeveloperName, &apos;Contract_Progress&apos;), NOT(ISPICKVAL( TW1_Contract_Demand_Status__c , &apos;Completed&apos;)),
ISPICKVAL( TW1_Status__c , &quot;Closed&quot;) 
)</errorConditionFormula>
    <errorMessage>Please fill the field Contract Demand Status (SC Input) before continue the flow.</errorMessage>
</ValidationRule>