force-app/main/default/objects/TW1_Step__c/validationRules/CantGoThroughContractProgWithoutSupplier.validationRule-meta.xml
<ValidationRule>
    <fullName>CantGoThroughContractProgWithoutSupplier</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  CONTAINS(RecordType.DeveloperName, &apos;Contract_Progress&apos;), ISBLANK( TW1_Vendor__c),  ISPICKVAL( TW1_Contract_Demand_Status__c , &apos;Completed&apos;) 
)</errorConditionFormula>
    <errorMessage>Please fill the field Supplier before continue the flow.</errorMessage>
</ValidationRule>