force-app/main/default/objects/TW1_Step__c/validationRules/DataEvidenciaObrigatoriedade.validationRule-meta.xml
<ValidationRule>
    <fullName>DataEvidenciaObrigatoriedade</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(NeedEvidences__c,&apos;Yes&apos;),ISBLANK( DeadlineForSendingEvidence__c ))</errorConditionFormula>
    <errorDisplayField>DeadlineForSendingEvidence__c</errorDisplayField>
    <errorMessage>This field is necessary when evidence is required.</errorMessage>
</ValidationRule>