force-app/main/default/objects/TW1_Step__c/validationRules/DontStatVettingWithoutDocUploaded.validationRule-meta.xml
<ValidationRule>
    <fullName>DontStatVettingWithoutDocUploaded</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISPICKVAL(TW1_Approval_Flow__c, &apos;VVW Attachment&apos;), ISPICKVAL(TW1_Status__c, &apos;Closed&apos;), TW1_VVW_Doc_Uploaded__c = false
)</errorConditionFormula>
    <errorMessage>You have to upload a VVW Compliance Doc before close this step.</errorMessage>
</ValidationRule>