force-app/main/default/objects/TW1_Step__c/validationRules/Validates_step_closure_without_approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Validates_step_closure_without_approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
CONTAINS(RecordType.DeveloperName,&quot;TW1_Approval_Step&quot;),
NOT(CONTAINS(RecordType.DeveloperName,&quot;Get_Clarification_from_Supplier&quot;)),

NOT(CONTAINS(RecordType.DeveloperName,&quot;finalization_approval_process&quot;)),

NOT(CONTAINS(RecordType.DeveloperName,&quot;TW1_Approval_Step_Enable_Customer_User&quot;)),

NOT(CONTAINS(RecordType.DeveloperName,&quot;VVW_Attachment&quot;)),

ISPICKVAL(TW1_Status__c,&quot;Closed&quot;),
NOT(
OR(
ISPICKVAL(TW1_Approval_Status__c,&quot;Approved&quot;),ISPICKVAL(TW1_Approval_Status__c,&quot;Not Approved&quot;),ISPICKVAL(TW1_Approval_Status__c,&quot;Reassign to level 1&quot;))))</errorConditionFormula>
    <errorMessage>Complete the approval process before closing the registration.</errorMessage>
</ValidationRule>