force-app/main/default/objects/TW1_Step__c/validationRules/You_cannot_change_a_completed_Step.validationRule-meta.xml
<ValidationRule>
    <fullName>You_cannot_change_a_completed_Step</fullName>
    <active>true</active>
    <description>You cannot change a completed Step.</description>
    <errorConditionFormula>AND(OR(ISPICKVAL(PRIORVALUE(TW1_Status__c), &quot;Closed&quot;),
       ISPICKVAL(PRIORVALUE(TW1_Status__c), &quot;Canceled&quot;)
    ),
    NOT(ISNULL(PRIORVALUE(TW1_Conclusion_Date__c))),
    RecordType.DeveloperName == &apos;Warning_ReceiveConfirmation&apos;
)</errorConditionFormula>
    <errorMessage>You cannot change a completed Step.</errorMessage>
</ValidationRule>