force-app/main/default/objects/TW1_Step__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>TW1_Vendor__c</columns>
    <columns>TW1_Request__c</columns>
    <columns>TW1_Interaction__c</columns>
    <columns>TW1_Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>TW1_Subject__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>Administrator</role>
    </sharedTo>
</ListView>