force-app/main/default/objects/TW1_Step__c/listViews/Compliance2_TW1_Step.listView-meta.xml
<ListView>
    <fullName>Compliance2_TW1_Step</fullName>
    <columns>NAME</columns>
    <columns>TW1_Subject__c</columns>
    <filterScope>Queue</filterScope>
    <label>Compliance2</label>
    <queue>Compliance2</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>