force-app/main/default/objects/TW1_Step__c/listViews/Compliance_Senegal_TW1_Step.listView-meta.xml
<ListView>
    <fullName>Compliance_Senegal_TW1_Step</fullName>
    <filterScope>Queue</filterScope>
    <label>Compliance Senegal</label>
    <queue>Compliance_Senegal</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>