force-app/main/default/objects/TW1_Step__c/listViews/Compliance_TW1_Step.listView-meta.xml
<ListView>
    <fullName>Compliance_TW1_Step</fullName>
    <columns>NAME</columns>
    <columns>TW1_Approver__c</columns>
    <columns>TW1_Comments__c</columns>
    <filterScope>Queue</filterScope>
    <label>Compliance</label>
    <queue>Compliance</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>